# math_tool

./: .gitignore  CMaKeLists.txt  CMakeLists.txt  LICENSE.txt  README.md  main.cpp  math_tool.sln
language/: english.json
tools/: Basic_calculation.cpp  Basic_calculation.h  ROF.cpp  ROF.h  about_pi.cpp  about_pi.h  circumference.cpp  circumference.h  score.cpp  score.h  zc.cpp  zc.h
